fix alignment bug

--- a/src/stylesheets/_about-page.scss
+++ b/src/stylesheets/_about-page.scss
@@ -13,7 +13,7 @@
     height: 230px;
     left: -116px;
     line-height: 57px;
-    position: absolute;
+    position: relative;
     transform: rotate(270deg);
     width: 450px;
 
@@ -32,10 +32,10 @@
     height: 200px;
     letter-spacing: 0;
     line-height: 100px;
-    position: absolute;
+    position: relative;
     right: 0;
     text-overflow: wrap;
-    top: 0;
+    top: -309px;
     white-space: normal;
     width: 634px;
   }
